# newStructura

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  README.md  planner.md  plano2.md  refactorplan.md  resources.qrc
src/: AssignBarPropertiesDialog.cpp  AssignBarPropertiesDialog.h  BarPropertiesDialog.cpp  BarPropertiesDialog.h  CoordinateDialog.cpp  CoordinateDialog.h  CustomInteractorStyle.cpp  CustomInteractorStyle.h  DistributedLoadDialog.cpp  DistributedLoadDialog.h  GridDialog.cpp  GridDialog.h  LoadVisualization.cpp  LoadVisualization.h  LocalCoordinateSystem.cpp  LocalCoordinateSystem.h  MainWindow.cpp  MainWindow.h  MaterialDialog.cpp  MaterialDialog.h  ModelEntities.h  NodalLoadDialog.cpp  NodalLoadDialog.h  PropertiesPanel.cpp  PropertiesPanel.h  RestraintDialog.cpp  RestraintDialog.h  SceneController.cpp  SceneController.h  SectionDialog.cpp  SectionDialog.h  SelectionModel.cpp  SelectionModel.h  __tmp.txt  main.cpp
src/app/: BarService.cpp  BarService.h  IModelRepository.h  InMemoryModelRepository.h  NodeService.cpp  NodeService.h  SceneControllerFacade.cpp  SceneControllerFacade.h  UndoRedoService.cpp  UndoRedoService.h
src/core/model/: ModelEntities.h  Vector3.h
src/tests/: MockSceneRenderer.h  TestCoreModels.cpp  TestRepositoryAndServices.cpp  TestSceneControllerFacade.cpp
src/ui/: MainWindowPresenter.cpp  MainWindowPresenter.h
src/viz/: ISceneRenderer.h  VtkSceneRenderer.cpp  VtkSceneRenderer.h
